# takumi

./: AGENTS.md  README.md  demo.py  example_docker.md  pyproject.toml  sample.md
src/takumi/: __init__.py  cli.py  evidence_agent.py  proofread_agent.py  report_agent.py
